--- a/Alvy_template/task7.html
+++ b/Alvy_template/task7.html
@@ -14,7 +14,15 @@
         </div>
         <div class="bottom">
           <p>STUDIO</p>
-          <div class="text"></div>
+          <div class="text">
+            <h1>How We Help Fashion Brands Stand Out</h1>
+            <p>
+              We help fashion brands stand out with our expertise in branding,
+              marketing, and creative solutions that captivate audiences and
+              differentiate brands.
+            </p>
+            <button>OUR STORY</button>
+          </div>
         </div>
       </section>
     </main>
