--- a/Alvy_template/task7.html
+++ b/Alvy_template/task7.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="task7.css" />
   </head>
   <body>
@@ -21,7 +25,7 @@
               marketing, and creative solutions that captivate audiences and
               differentiate brands.
             </p>
-            <button>OUR STORY</button>
+            <button><i class="ri-arrow-down-fill"></i>OUR STORY</button>
           </div>
         </div>
       </section>
