--- a/Alvy_template/task7.html
+++ b/Alvy_template/task7.html
@@ -52,6 +52,57 @@
           </div>
         </div>
       </section>
+
+      <section class="view3">
+        <div class="top">
+          <img src="./image2.webp" alt="" />
+        </div>
+        <div class="bottom">
+          <p>Our Philosophy</p>
+          <div class="text">
+            <h1>Putting Our Clients' Success First</h1>
+            <div class="phara">
+              <p>
+                At our agency, we firmly believe in putting our clients' success
+                first. We are dedicated to understanding their unique goals,
+                challenges, and vision, and we tailor our services to meet their
+                specific needs. Our
+              </p>
+              <p>
+                collaborative approach ensures that our clients receive
+                personalized attention, exceptional service, and measurable
+                results, fostering long-term partnerships built on trust and
+                mutual success.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="view4">
+        <div class="top">
+          <img src="./image3.webp" alt="" />
+        </div>
+        <div class="bottom">
+          <p>Our Vision</p>
+          <div class="text">
+            <h1>Setting the Standard for Excellence</h1>
+            <div class="phara">
+              <p>
+                We are committed to setting the standard for excellence in
+                everything we do. With a relentless pursuit of quality,
+                innovation, and results, we strive to exceed expectations and
+                deliver exceptional outcomes for
+              </p>
+              <p>
+                our clients. Our team of industry experts, combined with our
+                unwavering dedication to excellence, positions us as a leader in
+                the fashion agency landscape.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
