--- a/Alvy_template/task7.html
+++ b/Alvy_template/task7.html
@@ -103,6 +103,44 @@
           </div>
         </div>
       </section>
+
+      <section class="view5">
+        <div class="card">
+          <div class="top">
+            <div class="icon"><i class="ri-instagram-line"></i></div>
+            <div class="icon"><i class="ri-twitter-line"></i></div>
+            <div class="icon"><i class="ri-linkedin-line"></i></div>
+          </div>
+          <div class="bottom">
+            <p>Arlene McCoy</p>
+            <p>Branding</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top">
+            <div class="icon"><i class="ri-instagram-line"></i></div>
+            <div class="icon"><i class="ri-twitter-line"></i></div>
+            <div class="icon"><i class="ri-linkedin-line"></i></div>
+          </div>
+          <div class="bottom">
+            <p>Bessie Cooper</p>
+            <p>Marketing</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="top">
+            <div class="icon"><i class="ri-instagram-line"></i></div>
+            <div class="icon"><i class="ri-twitter-line"></i></div>
+            <div class="icon"><i class="ri-linkedin-line"></i></div>
+          </div>
+          <div class="bottom">
+            <p>Marvin McKinney</p>
+            <p>Video</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
