--- a/Flutter ecosystem/Task8.html
+++ b/Flutter ecosystem/Task8.html
@@ -6,5 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="task8.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="view1">
+        <div class="top">
+          <div class="heading">
+            <h1>A strong ecosystem, powered by open source</h1>
+          </div>
+          <div class="image">
+            <img src="./image1.png" alt="" />
+          </div>
+        </div>
+        <div class="bottom">
+          <p>
+            From packages and plugins to friendly developers, find all of the
+            resources you need to be successful with Flutter.
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
