--- a/Flutter ecosystem/Task8.html
+++ b/Flutter ecosystem/Task8.html
@@ -24,6 +24,20 @@
           </p>
         </div>
       </section>
+
+      <section class="view2">
+        <div class="card1">
+          <div class="top">
+            <h2>Community</h2>
+            <p>
+              Join developers around the world who are building with Flutter.
+            </p>
+          </div>
+          <div class="bottom">
+            <img src="image2.jpg" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
