--- a/Flutter ecosystem/Task8.html
+++ b/Flutter ecosystem/Task8.html
@@ -25,7 +25,7 @@
         </div>
       </section>
 
-      <section class="view2">
+      <!-- <section class="view2">
         <div class="card1">
           <div class="top">
             <h2>Community</h2>
@@ -37,7 +37,7 @@
             <img src="image2.jpg" alt="" />
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
